--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <style>
       html,
       body {
+        font-family: "Courier New", Courier, monospace;
         height: 100%;
         padding: 0;
         margin: 0;
@@ -31,6 +32,7 @@
   </head>
 
   <body>
+    <h3 style="position: absolute; top: -50; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white">Trinh ngu xi</h3>
     <canvas id="pinkboard"></canvas>
     <script>
       /*
