--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
 
   <body>
-    <h3 style="position: absolute; top: -50; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white">Trinh ngu xi</h3>
+    <h3 style="position: absolute; top: -50; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; color: white">Nguyễn Lan Trinh</h3>
     <canvas id="pinkboard"></canvas>
     <script>
       /*
